--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.web.resources.cache.cachecontrol.max-age=0d
 server.error.include-stacktrace=on_param
 spring.jpa.show-sql=true
 #spring.jpa
+#server.max-http-request-header-size=64kb
